--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -13,9 +13,9 @@
     </li>
   </ul>
 
-  <form class="d-flex form-in-line my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="text" placeholder="Username" />
-    <input class="form-control mr-sm-2" type="password" placeholder="Password" />
-    <button class="btn btn-success my-sm-0" type="submit">Login</button>
+  <form #loginForm="ngForm" class="d-flex form-in-line my-2 my-lg-0" (ngSubmit)="login()">
+    <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" required [(ngModel)]="model.username" />
+    <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" required [(ngModel)]="model.password" />
+    <button [disabled]="!loginForm.valid" class="btn btn-success my-sm-0" type="submit">Login</button>
   </form>
 </nav>
