--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -7,12 +7,19 @@
   </div>
 
   <div class="form-group">
+    <label for="favouriteValue">What is your favourite value?</label>
+    <select class="form-control" id="favouriteValue">
+      <option *ngFor="let value of valuesFromHome" [value]="value">{{value.name}}</option>
+    </select>
+  </div>
+
+  <div class="form-group">
     <input type="password" class="form-control" name="password" required [(ngModel)]="model.password" placeholder="password" >
   </div>
 
   <div class="form-group text-center">
-    <button class="btn btn-success" type="submit">Register</button>
-    <button class="btn btn-default" type="button" (click)="cancel()" >Cancel</button>
+    <button class="btn btn-success m-1" type="submit">Register</button>
+    <button class="btn btn-danger m-1" type="button" (click)="cancel()" >Cancel</button>
   </div>
 
 </form>
