--- a/DatingApp-SPA/src/app/home/home.component.html
+++ b/DatingApp-SPA/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <h1>Find your match</h1>
     <p class="lead">Come on in to view your matches... Just sign up and get start!</p>
     <div class="text-center">
-      <button class="btn btn-primary btn-lg m-1" (click)="registerToggle()">Register</button>
+      <button class="btn btn-dark btn-lg m-1" (click)="registerToggle()">Register</button>
       <button class="btn btn-info btn-lg m-1">Learn more</button>
     </div>
   </div>
