--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <a class="navbar-brand" href="#">Dating app</a>
         
-        <ul class="navbar-nav mr-auto">
+        <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Matches</a>
           </li>
@@ -11,9 +11,6 @@
           </li>
           <li class="nav-items">
             <a class="nav-link" href="#">Messages</a>
-          </li>
-          <li *ngIf="loggedIn()" class="nav-items">
-            <a class="nav-link" href="#" (click)="logout()">Logout</a>
           </li>
         </ul>
         
@@ -24,7 +21,7 @@
           <div class="dropdown-menu" *dropdownMenu>
             <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Edit Profile</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i> Logout</a>
+            <a class="dropdown-item" href="#" (click)="logout()" ><i class="fa fa-sign-out"></i> Logout</a>
           </div>
         </div>
         
