--- a/DatingApp-SPA/src/app/members/member-detiail/member-detiail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detiail/member-detiail.component.html
@@ -1,4 +1,7 @@
-<div class="container mt-5 mb-5">
+<div class="container">
+  <div class="mt-5 mb-4 border-bottom profile-title">
+    <h1><strong>{{user.knownAs}}'s Profile</strong></h1>
+  </div>
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
@@ -44,7 +47,9 @@
             <p>{{user.interest}}</p>
           </tab>          
           <tab heading="Photos">
-            <p>Photos goes here</p>
+            <div class="d-flex justify-content-center align-items-center mt-5">
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
+            </div>
           </tab>  
           <tab heading="Messages">
             <p>Messages goes here</p>
