--- a/DatingApp-SPA/src/app/members/member-detiail/member-detiail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detiail/member-detiail.component.html
@@ -10,19 +10,19 @@
         <div class="card-body">
           <div>
             <strong>Location</strong>
-            <p>{{user.city}}, {{user.country}}</p>
+            <p class="text-muted">{{user.city}}, {{user.country}}</p>
           </div>
           <div>
             <strong>Age</strong>
-            <p>{{user.age}}</p>
+            <p class="text-muted">{{user.age}}</p>
           </div>
           <div>
             <strong>Last Active</strong>
-            <p>{{user.lastActive}}</p>
+            <p class="text-muted">{{user.lastActive}}</p>
           </div>
           <div>
             <strong>Joined since</strong>
-            <p>{{user.created}}</p>
+            <p class="text-muted">{{user.created}}</p>
           </div>
         </div>
         <div class="card-footer">
@@ -36,13 +36,13 @@
     <div class="col-sm-8">
       <div class="tab-panel">
         <tabset class="member-tabset">
-          <tab heading="About {{user?.knownAs}}">
+          <tab class="mt-3" heading="About {{user?.knownAs}}">
             <h4>Description</h4>
-            <p>{{user.introduction}}</p>
+            <p class="text-muted">{{user.introduction}}</p>
             <h4>Looking for</h4>
-            <p>{{user.lookingFor}}</p>
+            <p class="text-muted">{{user.lookingFor}}</p>
           </tab>
-          <tab heading="Interests">
+          <tab class="mt-3" heading="Interests">
             <h4>Interests</h4>
             <p>{{user.interest}}</p>
           </tab>          
