--- a/DatingApp-SPA/src/styles.css
+++ b/DatingApp-SPA/src/styles.css
@@ -59,8 +59,7 @@ body{
   .tab-panel {
         padding: 25px;
         padding-top:10px;
+        background-color: #fff !important;
     }
 
-  .member-tabset{
-  }
   
