--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -51,8 +51,8 @@
               <textarea name="lookingFor" rows="6" class="form-control" 
               [(ngModel)]="user.lookingFor"></textarea>
                <h4 class="mt-3">Interests</h4>
-              <textarea name="lookingFor" rows="6" class="form-control" 
-              [(ngModel)]="user.interest"></textarea>
+              <textarea name="interests" rows="6" class="form-control" 
+              [(ngModel)]="user.interests"></textarea>
               <h4 class="mt-3">Location Details:</h4>
               <div class="form-inlinr">
                 <label for="city">City</label>
@@ -60,7 +60,7 @@
                 [(ngModel)]="user.city">
               </div>
               <label for="country">Country</label>
-              <input type="text" class="form-control" [(ngModel)]="user.country">
+              <input type="text" name="country" class="form-control" [(ngModel)]="user.country">
             </form>
           </tab>
           <tab heading="Edit Photos">
