Finished edit user

--- a/DatingApp-SPA/src/app/home/home.component.html
+++ b/DatingApp-SPA/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
-  <div *ngIf="!registerMode" class="" style="text-align:center;">
-    <h1>Find your match</h1>
+  <div *ngIf="!registerMode" class="text-center">
+    <h1><strong>Find your match</strong></h1>
     <p class="lead">Come on in to view your matches... Just sign up and get start!</p>
     <div class="text-center">
       <button class="btn btn-dark btn-lg m-1" (click)="registerToggle()">Register</button>
