--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -1,4 +1,4 @@
-<div class="card border-0 shadow mb-5">
+<div class="card border sm-crd mb-5">
   <div class="card-img-wrapper">
     <img
       class="card-img-top"
@@ -23,7 +23,7 @@
       </li>
     </ul>
   </div>
-  <div class="card-body p-1">
+  <div class="card-body p-2">
     <h6 class="card-title text-center mb-1">
       <span style="font-size: large;" class="text-dark">
         <strong>{{ user.knownAs }}</strong> &nbsp;
