--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="mt-5 mb-4 border-bottom profile-title">
     <div class="row">
-      <div class="col-sm-4"><h1><strong>Your Profile</strong></h1></div>
+      <div class="col-sm-4"><h1><strong>Edit Profile</strong></h1></div>
       <div *ngIf="editForm.dirty" class="col-sm-8 alert alert-success">
         <strong>Information:</strong> You have made changes. 
           Any unsaved changes will be lost!
@@ -44,16 +44,16 @@
         <tabset class="member-tabset">
           <tab heading="Edit Details">
             <form #editForm="ngForm" id="editForm" (ngSubmit)="updateUser()">
-              <h4 class="mt-2">Description</h4>
-              <textarea name="introduction" rows="6" class="form-control" 
+              <strong class="mt-2">Description</strong>
+              <textarea name="introduction" rows="6" class="form-control mb-3" 
               [(ngModel)]="user.introduction"></textarea>
-              <h4 class="mt-3">Looking for</h4>
-              <textarea name="lookingFor" rows="6" class="form-control" 
+              <strong class="">Looking for</strong>
+              <textarea name="lookingFor" rows="6" class="form-control mb-3" 
               [(ngModel)]="user.lookingFor"></textarea>
-               <h4 class="mt-3">Interests</h4>
-              <textarea name="interests" rows="6" class="form-control" 
+               <strong class="">Interests</strong>
+              <textarea name="interests" rows="6" class="form-control mb-3" 
               [(ngModel)]="user.interests"></textarea>
-              <h4 class="mt-3">Location Details:</h4>
+              <strong class="">Location Details:</strong>
               <div class="form-inlinr">
                 <label for="city">City</label>
                 <input class="form-control" type="text" name="city" 
