--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" [routerLink]="['/home']" >DateZone</a>
+        <a class="navbar-brand" [routerLink]="['/home']" >LOVEBouquet</a>
         
         <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
           <li class="nav-item"  routerLinkActive="active" >
