--- a/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -2,7 +2,10 @@
   <div class="col-sm-2" *ngFor="let photo of photos">
     <img src="{{ photo.url }}" class="img-thumbnail p-l" alt="" />
     <div class="text-center">
-      <button type="button" class="btn btn-sm">Main</button>
+      <button type="button" class="btn btn-sm m-1" (click)="setMainPhoto(photo)" 
+      [ngClass]="photo.isMain ? 'btn-success active' : 'btn-dark'" [disabled]="photo.isMain">
+        Main
+      </button>
       <button type="button" class="btn btn-sm btn-danger">
         <i class="fa fa-trash-o"></i>
       </button>
