--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
-        <img src="{{user.photoUrl}}" alt="{{user.knownAs}}" 
+        <img src="{{photoUrl}}" alt="{{user.knownAs}}" 
         class="card-img-top img-thumbnail">
         <div class="card-body">
           <div>
