--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -1,20 +1,62 @@
-<form #registerForm="ngForm" (ngSubmit)="register()">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
   <h2 class="text-center text-primary">Sign Up</h2>
   <hr>
 
   <div class="form-group">
-    <input type="text" class="form-control" name="username" required [(ngModel)]="model.username" placeholder="Username">
+    <input type="text" 
+    [ngClass] = "{'is-invalid': registerForm.get('username').errors 
+    && registerForm.get('username').touched}"
+    class="form-control is-invalid" 
+    formControlName="username"  
+    placeholder="Username">
+    <div class="invalid-feedback">Please choose a username</div>
   </div>
-<!-- 
-  <div class="form-group">
-    <label for="favouriteValue">What is your favourite value?</label>
-    <select class="form-control" id="favouriteValue">
-      <option *ngFor="let value of valuesFromHome" [value]="value">{{value.name}}</option>
-    </select>
-  </div> -->
 
   <div class="form-group">
-    <input type="password" class="form-control" name="password" required [(ngModel)]="model.password" placeholder="password" >
+    <input type="password" 
+    [ngClass] = "{'is-invalid': registerForm.get('password').errors 
+    && registerForm.get('password').touched}"
+    class="form-control" 
+    formControlName="password"  
+    placeholder="Password" >
+    
+    <div class="invalid-feedback" 
+    *ngIf="registerForm.get('password').hasError('required') 
+    && registerForm.get('password').touched">
+      Password is required
+    </div>
+
+    <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('minlength') 
+        && registerForm.get('password').touched">
+      Password must be atleast 4 characters
+    </div>
+
+    <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('maxlength') 
+        && registerForm.get('password').touched">
+      Password cannot exceed 8 characters
+    </div>
+  </div>
+
+  <div class="form-group">
+    <input type="password" 
+    [ngClass] = "{'is-invalid': registerForm.get('confirmPassword').errors 
+    && registerForm.get('confirmPassword').touched
+    || registerForm.get('confirmPassword').touched
+    && registerForm.hasError('mismatch')}"
+    class="form-control" 
+    formControlName="confirmPassword" 
+    placeholder="Confirm Password">
+
+    <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword').hasError('required') 
+        && registerForm.get('confirmPassword').touched">
+      Password is required
+    </div>
+
+    <div class="invalid-feedback" *ngIf="registerForm.hasError('mismatch') 
+        && registerForm.get('confirmPassword').touched">
+      Password must match
+    </div> <!-- -->
+
   </div>
 
   <div class="form-group text-center">
@@ -24,3 +66,5 @@
 
 </form>
 
+<p>Form value: {{registerForm.value | json}}</p>
+<p>Form value: {{registerForm.status | json}}</p>
