Set main photo for newly registered users

--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
         </ul>
         
         <div *ngIf="loggedIn()" class="dropdown" dropdown>
-          <span><img src="{{photoUrl}}" alt=""></span>
+          <span><img src="{{photoUrl || '../../assets/user.png' }}" alt=""></span>
           <a class="dropdown-toggle text-light mr-2" dropdownToggle>
             Welcome {{authService.decodedToken?.unique_name | titlecase}}
           </a>
