--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -1,17 +1,14 @@
 <div class="card border sm-crd mb-5">
   <div class="card-img-wrapper">
     <img
-      class="card-img-top"
-      src="{{ user.photoUrl }}"
-      alt="{{ user.knownAs }}"
-    />
+      class="card-img-top" src="{{ user.photoUrl || '../../../assets/user.png' }}" alt="{{ user.knownAs }}" />
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item">
         <button class="btn btn-primary" [routerLink]="['/members/', user.id]" >
           <small><i class="fa fa-user"></i></small>
         </button>
       </li>
-      <li class="list-inline-item">
+      <li class="list-inline-item"> 
         <button class="btn btn-primary">
           <small><i class="fa fa-heart"></i></small>
         </button>
