--- a/DatingApp-SPA/src/app/members/member-detiail/member-detiail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detiail/member-detiail.component.html
@@ -18,11 +18,11 @@
           </div>
           <div>
             <strong>Last Active</strong>
-            <p class="text-muted">{{user.lastActive}}</p>
+            <p class="text-muted">{{user.lastActive | timeAgo}}</p>
           </div>
           <div>
             <strong>Joined since</strong>
-            <p class="text-muted">{{user.created}}</p>
+            <p class="text-muted">{{user.created | date: 'mediumDate'}}</p>
           </div>
         </div>
         <div class="card-footer">
@@ -44,7 +44,7 @@
           </tab>
           <tab class="mt-3" heading="Interests">
             <h4>Interests</h4>
-            <p>{{user.interest}}</p>
+            <p>{{user.interests}}</p>
           </tab>          
           <tab heading="Photos">
             <div class="d-flex justify-content-center align-items-center mt-5">
