Implemented pagination in SPA

--- a/DatingApp-SPA/src/app/home/home.component.html
+++ b/DatingApp-SPA/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 home">
   <div *ngIf="!registerMode" class="text-center">
     <h1><strong>Find your match</strong></h1>
     <p class="lead">Come on in to view your matches... Just sign up and get start!</p>
