--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -31,7 +31,7 @@
             [(ngModel)]="model.username" />
           <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" required
             [(ngModel)]="model.password" />
-          <button [disabled]="!loginForm.valid" class="btn btn-success my-sm-0" type="submit">Login</button>
+          <button [disabled]="!loginForm.valid" class="btn btn-info my-sm-0" type="submit">Login</button>
         </form>
     </div>
 </nav>
