--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -9,7 +9,7 @@
         </button>
       </li>
       <li class="list-inline-item"> 
-        <button class="btn btn-primary">
+        <button class="btn btn-primary" (click)="sendLike(user.id)">
           <small><i class="fa fa-heart"></i></small>
         </button>
       </li>
