Message thread added to template

--- a/DatingApp-SPA/src/app/members/member-detiail/member-detiail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detiail/member-detiail.component.html
@@ -52,7 +52,7 @@
             </div>
           </tab>  
           <tab heading="Messages">
-            <p>Messages goes here</p>
+            <app-member-messages [recipientId]="user.id"></app-member-messages>
           </tab>
         </tabset>
       </div>
