--- a/DatingApp-SPA/src/app/members/member-messages/member-messages.component.html
+++ b/DatingApp-SPA/src/app/members/member-messages/member-messages.component.html
@@ -1,3 +1,50 @@
-<p *ngFor="let message of messages">
-  {{message.content}}
-</p>
+<div class="card">
+  <div class="card-body">
+    <div *ngIf="messages?.length === 0">
+      <p>No messages yet... Say hi by using the message box below</p>
+    </div>
+
+    <ul class="chat">
+      <li *ngFor="let message of messages">
+        <!-- to them -->
+        <div *ngIf="message.senderId == recipientId">
+          <span class="chat-img float-left mr-2">
+            <img src="{{message.senderPhotoUrl}}" alt="{{message.senderKnownAs}}" class="rounded-circle" />
+          </span>
+          <div class="chat-body">
+            <div class="header">
+              <strong class="primary-font">
+                {{message.senderKnownAs}}
+              </strong>
+              <small class="text-muted float-right">
+                <span class="fa fa-clock-o">{{message.messageSent | timeAgo}}</span>
+              </small>
+            </div>
+            <p class="text-muted">{{message.content}}</p>
+          </div>
+        </div>
+
+        <!-- to me -->
+        <div *ngIf="message.senderId != recipientId">
+          <span class="chat-img float-right">
+            <img src="{{message.senderPhotoUrl}}" alt="{{message.senderKnownAs}}" class="rounded-circle" />
+          </span>
+          <div class="chat-body">
+            <div class="header">
+              <small class="text-muted float-right mr-2">
+                <i  class="fa fa-clock-o mr-2"></i> <span>{{message.messageSent | timeAgo}}</span>
+                <span *ngIf="!message.isRead" class="text-danger"> (unread)</span>
+                <span *ngIf="message.isRead" class="text-success"> (Read {{message.dateRead | timeAgo}})</span>
+              </small>
+              <strong class="primary-font">
+                {{message.senderKnownAs}}
+              </strong>
+            </div>
+            <p>{{message.content}}</p>
+          </div>
+        </div>
+
+      </li>
+    </ul>
+  </div>
+</div>
