--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -14,7 +14,7 @@
         </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary">
+        <button class="btn btn-primary" [routerLink]="['/members/', user.id]" [queryParams]="{tab: 3}" >
           <small><i class="fa fa-envelope"></i></small>
         </button>
       </li>
