--- a/DatingApp-SPA/src/app/members/member-detiail/member-detiail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detiail/member-detiail.component.html
@@ -28,14 +28,14 @@
         <div class="card-footer">
           <div class="btn-group d-flex">
             <button class="btn btn-primary w-100"><i class="fa fa-heart"></i> Like</button>
-            <button class="btn btn-success w-100"><i class="fa fa-envelope"></i> Messages</button>
+            <button class="btn btn-success w-100" (click)="selectTab(3)"><i class="fa fa-envelope"></i> Messages</button>
           </div>
         </div>
       </div>
     </div>
     <div class="col-sm-8">
       <div class="tab-panel">
-        <tabset class="member-tabset">
+        <tabset class="member-tabset" #memberTabs>
           <tab class="mt-3" heading="About {{user?.knownAs}}">
             <h4>Description</h4>
             <p class="text-muted">{{user.introduction}}</p>
