--- a/DatingApp-SPA/src/app/members/member-messages/member-messages.component.html
+++ b/DatingApp-SPA/src/app/members/member-messages/member-messages.component.html
@@ -8,19 +8,19 @@
       <li *ngFor="let message of messages">
         <!-- to them -->
         <div *ngIf="message.senderId == recipientId">
-          <span class="chat-img float-left mr-2">
+          <span class="chat-img float-left mr-1">
             <img src="{{message.senderPhotoUrl}}" alt="{{message.senderKnownAs}}" class="rounded-circle" />
           </span>
           <div class="chat-body">
             <div class="header">
-              <strong class="primary-font">
+              <strong class="primary-font text-dark pt-2">
                 {{message.senderKnownAs}}
               </strong>
-              <small class="text-muted float-right">
-                <span class="fa fa-clock-o">{{message.messageSent | timeAgo}}</span>
+              <small class="float-right text-info">
+                <span><i class="fa fa-clock-o mr-1"></i> {{message.messageSent | timeAgo}}</span>
               </small>
             </div>
-            <p class="text-muted">{{message.content}}</p>
+            <p class="text-muted mt-3">{{message.content}}</p>
           </div>
         </div>
 
@@ -31,27 +31,31 @@
           </span>
           <div class="chat-body">
             <div class="header">
-              <small class="text-muted mr-2">
+              <small class="text-info mr-2">
                 <i  class="fa fa-clock-o mr-2"></i> <span>{{message.messageSent | timeAgo}}</span>
                 <span *ngIf="!message.isRead" class="text-danger"> (unread)</span>
                 <span *ngIf="message.isRead" class="text-success"> (Read {{message.dateRead | timeAgo}})</span>
               </small>
-              <strong class="primary-font float-right mr-2">
+              <strong class="primary-font text-dark float-right mr-2">
                 {{message.senderKnownAs}}
               </strong>
             </div>
-            <p>{{message.content}}</p>
+            <p class="text-muted mt-3">{{message.content}}</p>
           </div>
         </div>
 
       </li>
     </ul>
     <div class="card-footer">
-      <form action="">
+      <form #messageForm="ngForm" (ngSubmit)="messageForm.valid && sendMessage()">
         <div class="input-group">
-          <input type="text" class="form-control input-sm" placeholder="send a private message">
+          <input type="text" 
+          name="content"
+          required
+          [(ngModel)]="newMessage.content"
+          class="form-control input-sm" placeholder="send a private message">
           <div class="input-group-append">
-            <button class="btn btn-primary">Send</button>
+            <button class="btn btn-primary" [disabled]="!messageForm.valid">Send</button>
           </div>
         </div>
       </form>
